[gd_scene load_steps=6 format=3 uid="uid://c3y6v38bnhypa"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ls3xp"]
[ext_resource type="PackedScene" uid="uid://clj6moiu8pjqu" path="res://scenes/player.tscn" id="2_ysxb6"]
[ext_resource type="PackedScene" uid="uid://b832vcky6yk16" path="res://scenes/laser.tscn" id="3_dsofe"]
[ext_resource type="PackedScene" uid="uid://gql5j1pmhil3" path="res://scenes/diver_enemy.tscn" id="3_hvlgt"]
[ext_resource type="PackedScene" uid="uid://drq0hd5i8i7ag" path="res://scenes/enemy.tscn" id="4_mlvba"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ls3xp")
enemy_scenes = Array[PackedScene]([ExtResource("4_mlvba"), ExtResource("3_hvlgt")])

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("2_ysxb6")]
position = Vector2(446, 575)

[node name="PlayerSpawnPosition" type="Marker2D" parent="."]
position = Vector2(277, 844)

[node name="Laser" parent="." instance=ExtResource("3_dsofe")]
position = Vector2(113, 875)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
